# sandbox

phys/: CMakeLists.txt
phys/source/: artifacts.cc  phys.cc
rotate/: CMakeLists.txt  README.md
rotate/source/: rotate.cc
tracker/: CMakeLists.txt
tracker/source/: artifacts.cc  cloud_chamber.cc  shader.cc
tracker/source/shaders/: simple.fs  simple.vs
tri_counter/: Analysis.ipynb  CMakeLists.txt  README.md  simd_printer.py
tri_counter/data/: generate.py
tri_counter/source/: helpers.h  main.cc  scalar.cc  scalar.h  scalar_unrolled.cc  scalar_unrolled.h  sse_v0.cc  sse_v0.h  sse_v1.cc  sse_v1.h
